working alpha bitch

--- a/client/home.jade
+++ b/client/home.jade
@@ -78,6 +78,7 @@ template(name='home')
                 // .ui.label(title=count) #{name}
         .ui.sixteen.wide.column                
             .scrolling
+                +alpha
                 .ui.items
                     each wikis
                         .ui.item
