add user stuff back

--- a/client/home.jade
+++ b/client/home.jade
@@ -33,7 +33,7 @@ head
 
 
 template(name='layout')
-    // +nav
+    +nav
     .ui.bottom.attached.pushable.segment
         // +topbar
         // +leftbar
