--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -40,7 +40,7 @@ template(name='ibig')
     //- img.ui.image(src="https://img.icons8.com/plasticine/256/000000/#{name}.png" class=cl)
     //- img.ui.image(src="https://img.icons8.com/color/256/000000/#{name}.png" class=cl)
     //- img.ui.image(src="https://img.icons8.com/ios/256/000000/#{name}.png" class=cl)
-template(name='i')    
+template(name='icon')    
     i.icon(class=name)
     // img.ui.image(src="https://img.icons8.com/color/48/000000/#{name}.png" class=cl)
     // img.ui.image(src="https://img.icons8.com/plasticine/48/000000/#{name}.png" class=cl)
