start of separate reddit folder, much better subs

--- a/client/style.css
+++ b/client/style.css
@@ -68,7 +68,7 @@ a {
   background: rgba(250,250,250,.85);
   /*opacity: .5;*/
   /*border-radius: 5px;*/
-  padding:15px;
+  padding:3px;
 }
 .pulsing {
     /*height: 250px; */
@@ -483,7 +483,7 @@ img:active {
 }
 .zoomer:hover {
     transition: all .15s ease !important; 
-    text-shadow: 0 0 3px grey !important;
+    /*text-shadow: 0 0 3px grey !important;*/
     filter: drop-shadow(0px 0px 3px white);    
     z-index: 1000 !important;
     /*animation: fadein .25s !important;*/
