--- a/parts/reddit/subs.jade
+++ b/parts/reddit/subs.jade
@@ -3,9 +3,9 @@ template(name='subs')
         .row
             unless picked_subtags
                 .sixteen.wide.center.aligned.column
-                    // .ui.inline.header 
-                    //     i.reddit.icon
-                    //     |search subreddits
+                    .ui.inline.header 
+                        i.reddit.icon
+                        |search subreddits
                     .ui.icon.large.input
                         i.search.icon
                         input.search_subreddits(type='text' placeholder=sub_count autofocus='')
@@ -20,9 +20,9 @@ template(name='subs')
             if picked_subtags
                 .sixteen.wide.column
                     // .ui.inline.header #{sub_count}
-                    // i.reddit.big.icon
-                    // .ui.inline.header.search_subs
-                    //     |#{subreddit_docs.count} subs
+                    i.reddit.big.icon
+                    .ui.inline.header.search_subs
+                        |#{subreddit_docs.count} subreddits
                     // .smallscroll
                     if picked_subtags
                         // if many_tags
@@ -40,13 +40,13 @@ template(name='subs')
                         // .ui.label #{this}
                         // a.zoomer.ui.compact.small.button.pick_sub_tag(title=count) #{name}
                     // .sixteen.wide.column
-                    // +skve k='view_sub_detail' v=true l='detail' i='chevron up'
-                    // +skve k='view_sub_detail' v=false l='simple' i='chevron down'
-                    // +skve k='sort_subs' v='data.subscribers' l='subscribers' i='users'
-                    // +skve k='sort_subs' v='data.title' l='name' i='header'
-                    // +skve k='subs_limit' v=10 l='10'
-                    // +skve k='subs_limit' v=20 l='20'
-                    // +skve k='subs_limit' v=50 l='50'
+                    +skve k='view_sub_detail' v=true l='detail' i='chevron up'
+                    +skve k='view_sub_detail' v=false l='simple' i='chevron down'
+                    +skve k='sort_subs' v='data.subscribers' l='subscribers' i='users'
+                    +skve k='sort_subs' v='data.title' l='name' i='header'
+                    +skve k='subs_limit' v=10 l='10'
+                    +skve k='subs_limit' v=20 l='20'
+                    +skve k='subs_limit' v=50 l='50'
                     
                     // if can_skip_left
                     //     .ui.icon.button.skip_left
@@ -89,20 +89,20 @@ template(name='subreddit_doc')
             // span.description !{data.public_description_html}
             // a.description(style="color:#{data.primary_color}") !{data.public_description}
             .inline.description(style="color:black") !{data.public_description}
-            // |created {{ufrom data.created}}
+            |created {{ufrom data.created}}
             // span.say
             //     // i.money.icon
             //     |#{data.advertiser_category}
-            // .ui.label(title='active users')
-            //     i.users.icon
-            //     |#{data.accounts_active}
-            // .ui.label(title='subscribers')
-            //     i.edit.icon
-            //     |#{data.subscribers}
+            .ui.label(title='active users')
+                i.users.icon
+                |#{data.accounts_active}
+            .ui.label(title='subscribers')
+                i.edit.icon
+                |#{data.subscribers}
             each seven_tags
                 .ui.small.compact.basic.button.pick_tag #{this}
-            // if in_dev
-            //     +print_this
+            if in_dev
+                +print_this
             //     +remove_button
 template(name='unpick_subtag')
     a.unpick.ui.image.large.label.black.button(href='#')
