--- a/parts/stack/stack.jade
+++ b/parts/stack/stack.jade
@@ -67,6 +67,10 @@ template(name='stack')
                 //             +stack_card
                         
                         
+                        
+template(name='loading')
+    i.big.yin.yang.loading.icon
+                        
 template(name='stack_site_card')
     .ui.card
         .content
