--- a/parts/stack/site.jade
+++ b/parts/stack/site.jade
@@ -233,7 +233,7 @@ template(name='s_q_item')
                 .say.pointer.goto_q !{body}
                 .ui.horizontal.list
                     each tags
-                        +flat_tag_selector
+                        +flat_stag_picker
             .ui.horizontal.list
                 with owner
                     a.ui.small.header.item(href="/s/#{../site}/u/#{user_id}")
@@ -251,7 +251,7 @@ template(name='s_q_item')
             // .ui.divider
 template(name='stag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.small.tertiary.compact.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.basic.small.tertiary.compact.button.zoomer.pick_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -260,14 +260,14 @@ template(name='stag_picker')
         //     small #{count}
 template(name='unpick_stag')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
-    a.ui.basic.small.tertiary.compact.button.zoomer.select_tag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
+    a.ui.image.black.label.zoomer.unpick_stag(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
         strong !{this}
         // if in_dev
         //     small #{count}
-template(name='flat_tag_selector')
+template(name='flat_stag_picker')
     // a.ui.big.image.basic.rounded.label.zoomer.pointer.select_tag.select_term(href='#' title="#{count} results" class="#{selector_class} #{thinking_class}")
     .ui.basic.small.tertiary.compact.button.zoomer.select_flat_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
